# Radar_SNN_2

./: .gitignore  README.md  main.py  maths.md  pyproject.toml
.mplcache/: fontlist-v390.json
Notes/: TMR_report.tex  cochlear_plan.md  coincidence_maths.md  pipeline_report.md
cochlea_notebooks/: RF_neurons.ipynb  Redevelopment.ipynb  cochlear_tests.ipynb  second_order_neurons.ipynb
collating_files/: 3-surrogate-sound-localisation-solution.ipynb  tutorial_regression_1.ipynb  tutorial_regression_2.ipynb
collating_files/snn_localisation_pipeline/: __init__.py  config.py
config/: physics.py
delay_neuron_notebooks/: Delay_neuron_echo_2D.ipynb  Delay_neuron_echo_2D_extended.ipynb  Delay_neuron_echo_multiple.ipynb
library_testing/: SHD_dataloader.ipynb
library_testing/lauscher/: FM_real_bat_spikes.npz  __main__.py  abstract.py  adjusted_FM_isolated_call.npz  adjusted_isolated_call.npz  adjusted_synthetic_bat_spikes.npz  notes.txt  (+14 more)
notebooks/: Delay_neuron_echo.ipynb  Delay_neuron_echo_2D.ipynb  Delay_neuron_echo_2D_extended.ipynb  Looped_Delay_neuron_echo_multiple.ipynb  SISO_1D_spiking_radar_system.ipynb
snn_trainable_localisation/: arch_models.py  architecture_search.py  architecture_search_log.csv  architecture_search_resume.py  architecture_trials_log.csv  experiment_log.txt  optuna_10attempts.py  optuna_tune.py  plots.py  simulate_physics.py  snn_model.py  spike_encoder.py  train.py  utils.py
src/: config.py  detector.py  dsp.py  environment.py  interfaces.py  output.py  receiver.py  signal_generator.py  transmitter.py
theory/: rf_control_theory.ipynb
(+19 files in other folders)
